# awa

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml  nix-ci.yaml
benchmarks/: factorial.awa  prime_numbers.awa  sort.awa  tree_traversal.awa
src/: ast.rs  compiler.rs  diagnostic.rs  driver.rs  error.rs  interpreter.rs  interpreter_.rs  lex.rs  lib.rs  main.rs  optimizer.rs  parse.rs  tmp.rs  type_.rs  untyped_type.rs  vm.rs
src/ast/: analyzer.rs  argument.rs  assignment.rs  build_in_functions.rs  built_in_functions.rs  definition.rs  expression.rs  expression_typed.rs  expression_untyped.rs  location.rs  module.rs  operator.rs  pattern.rs  print.rs  reassignment.rs  statement.rs  translator.rs  typed.rs  typed_print.rs  types.rs  untyped.rs
src/cli/: check.rs  input.rs  mod.rs  panic.rs  run.rs
src/lex/: error.rs  lexer.rs  location.rs  mod.rs  newline_handler.rs  string.rs  tests.rs  token.rs
src/lexer/: lexer.rs  newline_handler.rs  tests.rs
src/parse/: error.rs  lexer.rs  lexical_error.rs  location.rs  src_span.rs  tests.rs  token.rs
src/vm/: gc.rs  instruction.rs  mod.rs  (+2 more)
tests/: arguments_amount_mismatch_error.awa  escape_characters.awa  example.awa  hotswap_basic.awa  hotswap_panic.awa  hotswap_struct.awa  infinite_gc.awa  invalid_synax.awa  jit_compiling.awa  jit_constant_folding.awa  jit_dead_code_function.awa  jit_dead_code_loop.awa  lexical_error.awa  loop.awa  optimizer_constant_folding.awa  optimizer_dead_code_function.awa  optimizer_dead_code_loop.awa  parsing_error.awa  type_mismatch_error.awa  utf8.awa
