[package]
name = "awa"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"

[dependencies]
ecow = "0.2.2"
itertools = "0.13.0"
pretty_assertions = "1.4.1"
