[package]
name = "awa"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
min_ident_chars = "warn"
module_name_repetitions = "allow"

[dependencies]
camino = "1.1.9"
codespan-reporting = "0.11.1"
ecow = "0.2.2"
itertools = "0.13.0"
pretty_assertions = "1.4.1"
termcolor = "1.4.1"
vec1 = "1.12.1"
